--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00ff00</color>
-    <color name="colorPrimaryDark">#30fF9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#80ff80</color>
+    <color name="colorPrimaryDark">#aafFaa</color>
+    <color name="colorAccent">#55ff55</color>
 </resources>
